--- a/HokumScript/HokumScript.csproj
+++ b/HokumScript/HokumScript.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <TargetFrameworks>netcoreapp2.2;net471</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;netcoreapp2.2;net471</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
