--- a/HokumScript/HokumScript.csproj
+++ b/HokumScript/HokumScript.csproj
@@ -2,10 +2,11 @@
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;netcoreapp2.2;net471</TargetFrameworks>
+        <RuntimeIdentifiers>win-x64;rhel.7.2-x64</RuntimeIdentifiers>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CSharp" Version="4.7.0-preview3.19551.4" />
+      <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     </ItemGroup>
 
 </Project>
